kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awstoazure-service
  namespace: awstoazure-prod
  labels:
    app: awstoazure
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: awstoazure
